--- a/App.css
+++ b/App.css
@@ -1,11 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html,
-body {
+html, body {
     background-color: #eee9e9;
     font-family: "Inter", sans-serif;
 }
@@ -15,446 +14,90 @@ a {
     color: unset;
 }
 
-body::-webkit-scrollbar {
-    display: none;
-}
-
-body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
 .site-wrapper {
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 
-header {
-    height: 69px;
-    display: flex;
-    align-items: center;
-    padding-block: 10px;
-    border-bottom: 1px solid #4d4d4d;
-    box-shadow: 1px 1px 1px 0px rgba(138, 137, 137, 0.75);
-}
-
-header .site-logo {
-    color: black;
-    margin-right: auto;
-    font-weight: 900;
-    font-size: 25px;
-}
-
-header a {
-    text-decoration: none;
-    font-weight: 600;
-    padding: 5px 20px;
-}
-
-header a:hover {
-    color: #161616;
-    text-decoration: underline;
-}
-
-header .login-icon {
-    height: 18px;
-    width: 18px;
-    margin-right: 5px;
-}
-
-header .login-link {
-    display: inline-flex;
-    align-items: center;
-}
-
-nav {
-    display: flex;
-}
-
-main {
-    margin-bottom: 84px;
-}
-
-footer {
-    background-color: #161616;
-    color: #aaaaaa;
-    height: 69px;
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    margin-top: auto;
-    font-weight: 500;
-}
-
-
-/*** HOME PAGE ***/
-.home-container {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-        url("./assets/images/car-cover.jpg") no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 350px;
-    color: white;
-    padding: 45px 23px;
-    height: 81vh;
-}
-
-.home-container h1 {
-    font-weight: 700;
-    font-size: 2.25rem;
-    line-height: 42px;
-}
-
-.home-container p {
-    line-height: 24px;
-}
-
-.home-container a {
-    display: flex;
-    text-align: center;
-    background-color: #ff8c38;
-    width: fit-content;
-    margin: 5em auto;
-    padding: 1.5em;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.1s ease-in-out;
-}
-
-.home-container a:hover {
-    transform: translate(1px, 1px);
-}
-
-/*** ABOUT PAGE ***/
-.about-page-container {
-    display: flex;
-    height: 81vh;
-    align-items: center;
-  }
-  
-  .about-page-container img {
-    width: 50%;
-    border-radius: 10px;
-  }
-  
-  .about-page-content {
-    padding: 30px;
-    color: #333;
-    max-width: 600px;
-  }
-  
-  .about-page-content h1 {
-    font-size: 36px;
-    line-height: 1.3;
-    margin-bottom: 20px;
-    color: #2c3e50;
-  }
-  
-  .about-page-content p {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 20px;
-  }
-  
-  .about-page-cta {
-    color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-    max-width: 500px;
-    margin: auto;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  
-  .about-page-cta h2 {
-    margin: 0;
-    font-size: 24px;
-    padding-bottom: 20px;
-    color: #fff;
-  }
-
-
-/* LOCATIONS PAGE */
-
-.city-location {
-    display: flex;
-    flex-direction: column;
-    margin: 2em 0 4em 0;
-}
-
-.vehicles-in-city {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background-color: #c7c7c7;
-    margin: 2em 10em;
-    border-radius: 8px;
-    column-gap: 150px;
-    align-items: center;
-}
-
-
-.city-location > h1 {
-    text-align: center;
-}
-
-.vehicles-in-city img{
-    width: 400px; 
-    height: 200px;
-    object-fit: cover;
-    border-radius: 8px;
-}
-
-.vehicle-section-one-copy, .vehicle-section-two-copy{
-    display: flex;
-
-}
-
-.vehicle-section-one-copy{
-    column-gap: 20px;
-    width: 250px;
-
-}
-
-.vehicle-section-two-copy{
-    padding: 2em 0;
-    gap: 20px;
-}
-
-.vehicles-in-city > a {
-    margin-left: 5em;
-    background-color: #269337; 
-    color: #fff;
-    font-size: 1.2rem;
-    width: 100px;
-    padding: .5em 1em;
-    border-radius: 8px;
-    text-align: center;
-    transition: background-color 0.3s ease; 
-}
-
-.vehicles-in-city > a:hover {
-    background-color: #196324;; /* Darker color on hover */
-}
-
-.locations-details{
-    position: absolute;
-    top: 40%;
-    left: 30%;
-}
-
-/*** VAN PAGES ***/
-
-.vehicle-container {
-    display: flex;
-    flex-direction: column;
-    width: 86%;
-    background-color: #f0eaea;
-    border-radius: 6px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    margin-bottom: 20px;
-  }
-  
-  .all-vehicles {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin: 4em 2em 1em 6em;
-  }
-  
-  .vehicle-container img {
-    width: 100%;
-    max-height: 250px;
-    object-fit: cover;
-    /* background-size: cover; */
-    border-radius: 5px 5px 0 0;
-  }
-  
-.vehicle-section-one {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5em .2em;
-}
-
-.vehicle-section-two{
-    display: flex;
-    justify-content: space-evenly;
-}
-  
-.vehicle-container > a{
-    align-self: center;
-    background-color: #ff8c38;
-    padding: .5em 1em;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 1.1rem;
-    color: white;
-    margin: .5em 0 1em 0;
-    cursor: pointer;
-}
-
-.vehicle-container > a:hover{
-    background-color: #cf7739;
-}
-
-.search-container {
-    display: flex;
-    justify-content: center;
-    background-color: #cacaca;
-}
-
-.selected-choices {
-    display: flex;
-    flex-direction: column;
-    padding: 2em;
-}
-
-.booking-container{
-    display: flex;
-    gap: 200px;
-    margin: 2em 1em;
-    padding: 2em;
-}
-
-.name-container{
-    display: flex;
-    gap: 50px;
-}
-
-.booking-details {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    padding: 2em;
-    width: 50%;
-    border-radius: 4px;
-}
-
-.form-container > button {
-    background-color: #4CAF50; 
-    color: white; 
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 2em; 
-    margin-left: 17em;
-}
-
-.form-container > button:hover{
-    background-color: #439446;
-}
-
-.booking-details > img{
-    width: 350px;
-    height: 250px;
-    border-radius: 8px;
-}
-
-.vehicle-details{
-    display: flex;
-    gap: 50px;
-    padding: 1em 0;
-}
-
-.booking-details > h5 {
-    font-size: 1rem;
-    padding-bottom: 1em;
-}
-
-.title-and-price{
-    display: flex;
-    align-items: center;
-    gap: 90px;
-    padding-bottom: 1em;
-}
-
-.back-button {
-    display: flex;
-    align-self: center;
-    margin: 1.5em 0 1em 2.2em;
-    font-size: 1.1rem;
-}
-
-.form-container{
-    background-color: white;
-    padding: 1em;
-    border-radius: 4px;
-}
-
-.form-container > section {
-    padding: .6em 0;
-}
-
-.name-container > section > input {
-    width: 250px;
-    height: 35px;
-    margin-top: .2em;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px solid gainsboro;
-}
-
-.form-container > section > input {
-    width: 550px;
-    height: 35px;
-    margin-top: .2em;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px solid gainsboro;
-
-}
-
-.form-container > h2 {
-    margin-bottom: 1.5em;
-    border-bottom: 4px solid #161616;
-}
-
-.back-button:hover{
-    color: #4d4c4c;
-}
 /* 
 .vehicle-type.selected {
     color: #ffead0;
 } */
 
-.vehicle-type.clear-filters {
-    margin-left: -20px;
-    height: 34px;
-    padding: 6px 26px;
-    font-style: normal;
-    font-weight: 500;
-    border: none;
-    border-radius: 5px;
-    text-decoration: underline;
-    background-color: transparent;
-    color: #4d4d4d;
-}
-
 /* PAYMENT MODAL */
 
-.payment-modal{
+.payment-modal {
     max-width: 600px;
     position: relative;
     padding: 0 1em;
 }
 
-.close-modal{
+.payment-modal > h2 {
+    text-align: center;
+    background-color: rgb(144, 90, 51);
+    padding: .3em 1em;
+    color: white;
+    border-radius: 4px;
+    margin: .2em 0 1em 0;
+}
+
+.payment-modal > h4 {
+    margin-top: 1.5em;
+}
+
+.pay-btn {
+    border: none;
+    margin: 2em 11em;
+    background-color: #905a33;
+    padding: .5em 1em;
+    border-radius: 8px;
+    color: white;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.pay-btn:hover {
+    background-color: #ff8c38;
+}
+
+.payment-details-card, 
+.payment-details-paypal, 
+.payment-details-two {
+    margin-top: 1em;
+}
+
+.payment-methods > section {
+    padding: .5em 0 0 0;
+}
+
+.payment-methods > section > input {
+    cursor: pointer;
+}
+
+.payment-details-paypal section {
+    padding-bottom: 1em;
+}
+
+.name-container{
+    display: flex;
+    gap: 50px;
+ }
+
+ .payment-methods {
+    margin-bottom: 2em;
+ }
+
+ .payment-details-card > section, .payment-details-two > section {
+    margin-top: .8em;
+ }
+
+.close-modal {
     position: absolute;
-    top: -5%;
-    left: 98%;
+    top: -3%;
+    left: 99%;
     padding: 0 .2em;
     border: none;
     background-color: transparent;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     cursor: pointer;
 }
 
@@ -462,94 +105,7 @@ footer {
     color: #454545;
 }
 
-.payment-modal > h1 {
-    text-align: center;
-}
-
-.pay-btn{
-    border: none;
-    margin: 3em 8em;
-    background-color: #4CAF50;
-    padding: .5em 1em;
-    border-radius: 8px;
-    color: white;
-    font-size: 1.2rem;
-    cursor: pointer;
-}
-
-.pay-btn:hover{
-    background-color: #439446;
-}
-
-.payment-details-card, .payment-details-paypal, .payment-details-two{
-    margin-top: 2em;
-}
-
-.payment-modal > h3{
-    padding: 1em 0;
-}
-
-.payment-methods > section {
-    padding: .5em 0;
-}
-
-.payment-methods > section > input {
-    cursor: pointer;
-}
-
-i[class*="van-type-"] {
-    padding: 7px 14px;
-}
-
-.locations-container > h1 {
- text-align: center;
- margin-top: 2em;
-}
-
-.locations-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 5em 20em;
-    gap: 37px;
-  }
-  
-.location-details {
-    position: relative;
-    text-align: center;
-  }
-  
-.location-details > h2 {
-    position: absolute;
-    top: 50%; 
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    font-size: 2.2em;
-    color: white;
-  }
-  
-.locationImage, .location-details > img {
-    width: 350px;
-    height: 250px;
-    filter: brightness(60%);
-    border-radius: 12px;
-  }
-  
-  
-.location-details > h2:hover {
-    color: #9d9696;
-  }
-  
-.vehicles-detail-container {
-    padding-inline: 27px;
-}
-
-
-
-.vehicles-detail-container .back-button:visited {
-}
+/* NOT FOUND ERROR */
 
 .not-found-container {
     padding-inline: 26px;
@@ -562,72 +118,4 @@ i[class*="van-type-"] {
     margin: 10% auto;
     background-color: #161616;
     color: white;
-}
-
-.login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 5em;
-    height: 81vh;
-}
-
-.login-form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 500px;
-}
-
-.login-form > input {
-    border: 1px solid rgba(209, 213, 219);
-    height: 40px;
-    text-indent: 10px;
-    font-family: "Inter", sans-serif;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-    font-weight: 400;
-}
-
-.login-form > input:focus {
-    outline: none;
-}
-
-.login-form > input:first-of-type {
-    border-radius: 6px 6px 0px 0px;
-}
-
-.login-form > input:last-of-type {
-    border-radius: 0px 0px 6px 6px;
-    border-top: none;
-}
-
-.login-form > button {
-    background-color: #ff8c38;
-    border: none;
-    border-radius: 6px;
-    height: 55px;
-    margin-top: 22px;
-    color: white;
-    font-family: "Inter", sans-serif;
-    cursor: pointer;
-}
-
-.create-account{
-    color: #ff8c38;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.login-form input{
-    margin-bottom: 15px;
-}
-
-.login-form > button:disabled {
-    background-color: #aaaaaa;
-    cursor: not-allowed;
-}
-
-.login-error {
-    color: red;
 }
