Organized the code a bit better

--- a/App.css
+++ b/App.css
@@ -46,7 +46,7 @@ a {
 
 .pay-btn {
     border: none;
-    margin: 2em 11em;
+    margin: 2em 0 2em 12em;
     background-color: #905a33;
     padding: .5em 1em;
     border-radius: 8px;
