--- a/frontend/pages/HomePage/HomePage.css
+++ b/frontend/pages/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 /*** HOME PAGE ***/
 .home-container {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-        url("../../public/car-cover.jpg") no-repeat center center;
+        url("../../../public/car-cover.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -9,7 +9,7 @@
     min-height: 350px;
     color: white;
     padding: 45px 23px;
-    height: 81vh;
+    min-height: 81vh;
 }
 
 .home-container h1 {
