--- a/pages/HomePage/HomePage.css
+++ b/pages/HomePage/HomePage.css
@@ -1,7 +1,7 @@
 /*** HOME PAGE ***/
 .home-container {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-        url("../../../public/car-cover.jpg") no-repeat center center;
+        url("../../car-cover.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
