--- a/pages/HomePage/HomePage.css
+++ b/pages/HomePage/HomePage.css
@@ -1,19 +1,17 @@
 /*** HOME PAGE ***/
 .home-container {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-        url("../../car-cover.jpg") no-repeat center center;
+        url("../car-cover.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height: 350px;
     color: white;
     padding: 45px 23px;
-    min-height: 81vh;
+    height: 81vh;
 }
 
 .home-container h1 {
-    font-weight: 700;
     font-size: 2.25rem;
     line-height: 42px;
     text-align: center;
