--- a/Main.css
+++ b/Main.css
@@ -120,206 +120,8 @@ a {
     color: white;
 }
 
-/* MOBILE LAYOUT */
-
-@media (max-width: 426px) {
-
-    .home-container {
-        height: 78.5vh;
-    }
-
-    header {
-        padding: 0;
-    }
-
-    nav {
-        gap: 1em;
-        margin: 1.4em 0 1em 1em;
-    }
-
-    nav > a {
-        font-size: .8rem;
-    }
-
-    header .site-logo {
-        font-size: 1.2rem;
-    }
-
-    .home-container h1 {
-        font-size: 1.5rem;
-    }
-
-    .home-container p{
-        font-size: 1rem;
-        line-height: 1.2em;
-    }
-
-    .home-container a {
-        font-size: .6rem;
-    }
-
-    .about-page-container {
-        flex-direction: column-reverse;
-        margin: 0 1em;
-        height: auto;
-    }
-
-    .about-page-content {
-        width: 100%;
-    }
-
-    .about-page-content h1 {
-        font-size: 1.5rem;
-        margin: 0 0 1em 0;
-        text-align: center;
-    }
-
-    .about-page-content p {
-        margin-bottom: 0;
-    }
-
-    .about-page-container img {
-        width: 80%;
-        margin-bottom: 2em;
-    }
-
-    .vehicles-top-description {
-        margin: 2em auto 0 auto;
-        font-size: 1.4rem;
-        width: auto;
-    }
-
-    .all-vehicles {
-        margin: 2em 0 1em 0;
-        width: 100%;
-    }
-
-    .all-vehicles-container {
-        flex-direction: column;
-    }
-
-    .vehicle-container {
-        flex-direction: column;
-    }
-
-    .vehicle-container img, .vehicle-container-copy img {
-        width: auto;
-        border-radius: 5px 5px 0 0;
-    }
-
-    .vehicle-cards {
-        padding: 1em;
-    }
-
-    .selected-choices {
-        padding: .5em;
-        border-bottom: none;
-        font-size: .8rem;
-    }
-
-    .clear-filters-btn {
-        margin: 1em 0;
-        font-size: .8rem;
-    }
-
-    .locations-container > h1, .city-location > h1 {
-        font-size: 1.8rem;
-    }
-
-    .locationImage, .location-details > img {
-        width: 250px;
-        height: 150px;
-    }
-
-    .locations-card {
-        gap: 2em;
-        margin: 2em 0;
-    }
-
-    .location-details > h2 {
-        font-size: 1.2rem;
-    }
-
-    .vehicle-container-copy {
-        flex-direction: column;
-        margin: 1.5em;
-    }
-
-    .vehicle-container-copy > a {
-        margin-left: 2em;
-    }
-
-    .city-location {
-        margin: 0;
-    }
-
-    .back-button {
-        font-size: .8rem;
-        align-items: center;
-    }
-
-    .booking-container {
-        flex-direction: column;
-        gap: 20px;
-        padding: 1em;
-    }
-
-    .booking-details {
-        width: 100%;
-        padding: 1em .5em;
-        margin-bottom: 1em;
-    }
-
-    .booking-details > img {
-        width: 340px;
-        height: 180px;
-    }
-
-    .title-and-price {
-        gap: 110px;
-    }
-
-    .form-container > h2 {
-        font-size: 1.4rem;
-        margin-bottom: .5em;
-    }
-
-    .name-container {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .form-container > section > input, 
-    .name-container > section > input{
-        width: 345px;
-    }
-
-    .form-container > button {
-        margin: 1em 0 0 7em;
-    }
-
-    .payment-modal {
-        max-width: 300px;
-        height: 550px;
-    }
-
-    .payment-details-card > section > input, 
-    .payment-details-two > section > input, 
-    .payment-details-paypal > section input,
-    #fName, #lName {
-        width: 270px;
-    }
-
-    .pay-btn {
-        margin: 1em 0 1em 3.5em;
-    }
-
-    .payment-submited {
-        padding: 1em;
-    }
-}
-
 /* TABLET LAYOUT */
+
 @media (max-width: 769px) {
 
     .home-container > a {
@@ -441,6 +243,242 @@ a {
 
     .pay-btn {
         margin: 1em 0 0 12em;
+    }
+}
+
+/* MOBILE LAYOUT */
+
+@media (max-width: 426px) {
+
+    .home-container {
+        height: 78.5vh;
+    }
+
+    header {
+        padding: 0;
+    }
+
+    nav {
+        gap: 1em;
+        margin: 1.4em 1em 1em 1em;
+    }
+
+    nav > a {
+        font-size: .8rem;
+    }
+
+    header .site-logo {
+        font-size: 1.2rem;
+    }
+
+    .home-container h1 {
+        font-size: 1.5rem;
+    }
+
+    .home-container p{
+        font-size: 1rem;
+        line-height: 1.2em;
+    }
+
+    .home-container a {
+        font-size: .8rem;
+    }
+
+    .about-page-container {
+        flex-direction: column-reverse;
+        margin: 0 1em;
+        height: auto;
+    }
+
+    .about-page-content {
+        width: 100%;
+        margin-top: 2em;
+    }
+
+    .about-page-content h1 {
+        font-size: 1.5rem;
+        margin: 0 0 1em 0;
+        text-align: center;
+    }
+
+    .about-page-content p {
+        margin-bottom: 2em;
+    }
+
+    .search-container {
+        padding: 0 1em;
+    }
+
+    .about-page-container img {
+        width: 80%;
+        margin-bottom: 2em;
+    }
+
+    .vehicles-top-description {
+        margin: 2em auto 0 auto;
+        font-size: 1.4rem;
+        width: auto;
+    }
+
+    .all-vehicles {
+        margin: 2em 0 1em 0;
+        width: 100%;
+    }
+
+    .all-vehicles-container {
+        flex-direction: column;
+        margin: 2em;
+    }
+
+    .vehicle-container {
+        flex-direction: column;
+    }
+
+    .vehicle-container img, .vehicle-container-copy img {
+        width: auto;
+        border-radius: 5px 5px 0 0;
+    }
+
+    .vehicle-cards {
+        padding: 1em;
+    }
+
+    .selected-choices {
+        padding: .5em;
+        border-bottom: none;
+        font-size: .8rem;
+    }
+
+    .clear-filters-btn {
+        margin: 1em 0;
+        font-size: .8rem;
+    }
+
+    .locations-container > h1, .city-location > h1 {
+        font-size: 1.8rem;
+    }
+
+    .locationImage, .location-details > img {
+        width: 250px;
+        height: 150px;
+    }
+
+    .locations-card {
+        gap: 2em;
+        margin: 2em 0;
+    }
+
+    .location-details > h2 {
+        font-size: 1.2rem;
+    }
+
+    .vehicle-container-copy {
+        flex-direction: column;
+        margin: 1;
+        width: 91%;
+    }
+
+    .vehicle-container-copy > a {
+        margin-left: 2em;
+    }
+
+    .city-location {
+        margin: 0;
+    }
+
+    .back-button {
+        font-size: .8rem;
+        align-items: center;
+    }
+
+    .booking-container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 1em;
+    }
+
+    .booking-details {
+        width: 100%;
+        padding: 1em .5em;
+        margin-bottom: 1em;
+    }
+
+    .booking-details > img {
+        width: 300px;
+        height: 180px;
+    }
+
+    .vehicle-details {
+        gap: 20px;
+    }
+
+    .title-and-price {
+        font-size: .9rem;
+        gap: 80px;
+    }
+
+    .form-container > h2 {
+        font-size: 1.4rem;
+        margin-bottom: .5em;
+    }
+
+    .name-container {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .form-container > section > input, 
+    .name-container > section > input{
+        width: 315px;
+    }
+
+    .form-container > button {
+        margin: 1em 0 0 7em;
+    }
+
+    .payment-modal {
+        max-width: 300px;
+        height: 550px;
+    }
+
+    .payment-details-card > section > input, 
+    .payment-details-two > section > input, 
+    .payment-details-paypal > section input,
+    #fName, #lName {
+        width: 270px;
+    }
+
+    .pay-btn {
+        margin: 1em 0 1em 3.5em;
+    }
+
+    .payment-submited {
+        padding: 1em;
+    }
+}
+
+
+@media (max-width: 385px) {
+
+    .title-and-price {
+        font-size: .8rem;
+        gap: 50px;
+    }
+
+    .booking-details > img {
+        width: 250px;
+    }
+
+    .vehicle-details {
+        gap: 15px;
+    }
+
+    .form-container > section > input, .name-container > section > input {
+        width: 260px;
+    }
+
+    .form-container > button {
+        margin: 1em 0 0 4.5em;
     }
 }
 
